# aol-calendar

./: .gitignore  README.md  app.py  cal_utils.py  compose.yaml  copy_data_files_to_mongodb.py  db_utils.py  make_calendar.py  parsing_utils.py  pyproject.toml  sync_events.py
aol_calendar/: __init__.py  admin.py  cal.py  const.py  db.py  filters.py  forms.py  vars.py
aol_calendar/static/: admin.css  admin.js  calendar.css  calendar.js
aol_calendar/templates/: calendar.html  event-dialog.html  page.html
aol_calendar/templates/admin/: base.html  events.html
aol_calendar/utils/: __init__.py  admin.py  cal.py  db.py  parsing.py
docs/: FORMAT.md
scripts/: copy_data_files_to_mongodb.py  fix_events.py  make_calendar.py  sync_events.py
static/: admin.js
templates/: add-event-form.html  calendar.html  event-form.html  info-box.html  page.html
tests/: test_cal_utils.py
