[project]
name = "aol-calendar"
version = "0.1.0"
description = "Календарь курсов и мероприятий ИЖ в Иркутске"
readme = "README.md"
authors = [
    { name = "Alexey Kuzminich", email = "akuzminich@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aa",
    "flask>=3.1.2",
    "jinja2>=3.1.6",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
]

[tool.uv.sources]
aa = { path = "../automation", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"